fix paragraph spacing

--- a/css/style.css
+++ b/css/style.css
@@ -233,3 +233,8 @@ footer {
     padding: 80px 20px;
   }
 }
+
+#about p{
+margin-bottom:20px;
+line-height:1.8;
+}
